@@ -228,6 +228,14 @@
             <th>Description</th>
           </tr>
           <tr valign="top">
+            <td id="F:Mono.DocTest.Color.AnotherGreen">
+              <b>AnotherGreen</b>
+            </td>
+            <td>
+              <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+            </td>
+          </tr>
+          <tr valign="top">
             <td id="F:Mono.DocTest.Color.Blue">
               <b>Blue</b>
             </td>
